# monadiccp-gecode

./: .gitignore  .travis.yml  README.md  monadiccp-gecode.cabal  stack.yaml
Control/CP/FD/: GecodeExample.hs
Control/CP/FD/Gecode/: Common.hs  Interface.hsc
examples/: AllInterval.hs  Alpha.hs  BIBD.hs  Domino.hs  EFPA.hs  GolombRuler.hs  GraphColor.hs  Grocery.hs  LangfordNumber.hs  MagicSeries.hs  MagicSquare.hs  MineSweeper.hs  Olympic.hs  Partition.hs  PerfectSquare.hs  Queens.hs  Ring.hs  StressDomain.hs  Sudoku.hs  Test.hs  TestPretty.hs  TryDemo.hs  Zebra.hs
lib/: gecodeglue.cpp
src/Control/CP/FD/: GecodeExample.hs
src/Control/CP/FD/Gecode/: CodegenSolver.hs  Common.hs  Runtime.hs  RuntimeSearch.hs
